# Quanta

./: .gitignore  LICENSE  README.md  TODO.md  demo.py  pyproject.toml  setup.py  task1_initial_setup.md  task2_core_library.md
Quanta/: __init__.py
Quanta/backends/: __init__.py
Quanta/backends/cpu/: quantization.py
Quanta/functional/: __init__.py  model.py  quantization.py  tensor_ops.py
Quanta/tests/: test_base.py  test_quantization.py
Quanta/utils/: __init__.py  tensor_utils.py  utils.py
bitsandbyes/functional/: base.py  examples.py  quantization.py  tensor_ops.py  test_base.py
bitsandbyes/nn/: __init__.py
bitsandbyes/optim/: __init__.py  adam.py
bitsandbyes/tests/: test_quantization.py
bnbenv/: pyvenv.cfg
bytes/: __init__.py  utils.py
bytesandbits/functional/: __init__.py  base.py  quantization.py  state.py
bytesandbits/nn/: linear.py
bytesandbits/tests/: test_base.py  test_quantization.py
bytesandbits/utils/: __init__.py  tensor_untils.py  tensor_utils.py  utils.py
example/: benchmarks.py  examples.py  model_quantization_example.py  precision_convert_example.py  state_example.py  tensor_serialization_example.py  tensor_utils_example.py
